[project]
name = "fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.3.1",
    "accelerate>=1.12.0",
    "argparse>=1.4.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.3.0",
    "evaluate>=0.4.6",
    "langchain-huggingface>=1.0.1",
    "peft>=0.18.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.2",
    "transformers>=4.57.1",
    "trl>=0.24.0",
]
