[project]
name = "fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "absl-py==2.3.1",
    "accelerate==1.12.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "argparse==1.4.0",
    "attrs==25.4.0",
    "bitsandbytes==0.48.2",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cuda-bindings==13.0.3",
    "cuda-pathfinder==1.2.2",
    "cyver==2.0.2",
    "datasets==4.4.1",
    "deepspeed==0.18.7",
    "dill==0.4.0",
    "einops==0.8.2",
    "evaluate==0.4.6",
    "filelock==3.20.0",
    "flash-attn==2.8.3",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "hjson==3.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "multidict==6.7.0",
    "multiprocess==0.70.18",
    "neo4j==6.1.0",
    "networkx==3.5",
    "ninja==1.13.0",
    "nltk==3.9.2",
    "numpy==2.3.5",
    "nvidia-cublas==13.1.0.3",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti==13.0.85",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc==13.0.88",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime==13.0.96",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cudnn-cu13==9.15.1.9",
    "nvidia-cufft==12.0.0.61",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile==1.15.1.6",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand==10.4.0.35",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver==12.0.4.66",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse==12.6.3.3",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-cusparselt-cu13==0.8.0",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nccl-cu13==2.28.9",
    "nvidia-nvjitlink==13.0.88",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvshmem-cu13==3.4.5",
    "nvidia-nvtx==13.0.85",
    "nvidia-nvtx-cu12==12.8.90",
    "packaging==25.0",
    "pandas==2.3.3",
    "peft==0.17.1",
    "pillow==12.0.0",
    "propcache==0.4.1",
    "protobuf==7.34.0",
    "psutil==7.1.3",
    "py-cpuinfo==9.0.0",
    "pyarrow==22.0.0",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rouge-score==0.1.2",
    "safetensors==0.7.0",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "sentencepiece==0.2.1",
    "setuptools==82.0.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "torch==2.10.0+cu130",
    "torchvision==0.25.0+cu130",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "triton==3.6.0",
    "trl==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "xxhash==3.6.0",
    "yarl==1.22.0",
]

[tool.uv]
environments = [
  "sys_platform == 'linux'"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
