[project]
name = "test"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.12.15",
    "aiosignal>=1.4.0",
    "async-timeout>=4.0.3",
    "attrs>=25.3.0",
    "bs4>=0.0.2",
    "cyver>=2.0.1",
    "dataclasses-json>=0.6.7",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "frozenlist>=1.7.0",
    "greenlet>=3.2.4",
    "httpx-sse>=0.4.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-deepseek>=0.1.4",
    "langchain-huggingface>=0.3.1",
    "langchain-milvus>=0.2.1",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.5",
    "lxml>=6.0.0",
    "marshmallow>=3.26.1",
    "matplotlib>=3.10.5",
    "multidict>=6.6.4",
    "mypy-extensions>=1.1.0",
    "neo4j>=5.28.2",
    "openai>=1.100.1",
    "propcache>=0.3.2",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "sqlalchemy>=2.0.43",
    "typing-inspect>=0.9.0",
    "yarl>=1.20.1",
]
